--- a/public/components/music-list.html
+++ b/public/components/music-list.html
@@ -1,4 +1,4 @@
-<link href="meteor-status.html" rel="import">
+<link rel="import" href="/bower_components/meteor-elements/meteor-connection.html" >
 <link rel="import" href="/bower_components/neon-animation/neon-animatable-behavior.html">
 <link rel="import" href="/bower_components/neon-animation/neon-shared-element-animatable-behavior.html">
 <link rel="import" href="/bower_components/neon-animation/animations/slide-down-animation.html">
@@ -75,13 +75,13 @@ Polymer({
 
   <template>
 
-    <meteor-status status="{{status}}"></meteor-status>
+    <meteor-connection connected="{{connected}}"></meteor-status>
 
     <paper-toolbar id="toolbar">
       <div>MUSIC//LIBRARY</div>
       <span class="flex"></span>
       <paper-icon-button icon="add-circle-outline" on-tap="newAlbum"></paper-icon-button>
-      <paper-icon-button icon="{{_getStatusIcon(status)}}"></paper-icon-button>
+      <paper-icon-button icon="{{_getStatusIcon(connected)}}"></paper-icon-button>
     </paper-toolbar>
 
     <neon-animated-pages id="pages" selected="{{selected}}" on-neon-animation-finish="complete">
@@ -155,8 +155,8 @@ Polymer({
     observers: [
       '_dataChanged(data.splices)',
     ],
-    _getStatusIcon: function(status) {
-      return status && status.connected ? 'cloud-done' : 'cloud-off';
+    _getStatusIcon: function(connected) {
+      return connected ? 'cloud-done' : 'cloud-off';
     },
     _computeChipStyle: function(item) {
       return "background: url("+item.arturl+") 0 0/100% 100%;";
@@ -291,7 +291,7 @@ Polymer({
             page.animationConfig.entry.push({
               name: 'slide-down-animation',
               node: element,
-              timing: { delay: 250 }
+              timing: { delay: 250, easing: 'cubic-bezier(0.0, 0.5, 0.2, 1.0)' }
             });
           }
         }
