Use differential:vulcanize and mquandalle:bower to avoid manual operations

--- a/public/components/music-app.html
+++ b/public/components/music-app.html
@@ -24,7 +24,7 @@
 
   <template>
     <meteor-connection status="{{status}}" on-server-disconnected="_onDisconnect"></meteor-connection>
-    <meteor-subscribe name="albums" isready="{{_subready}}"></meteor-subscribe>
+    <meteor-subscribe name="albums" args="[]" isready="{{_subready}}"></meteor-subscribe>
     <meteor-subscribe id="subalbum" name="album"></meteor-subscribe>
     <meteor-collection id="collection" name="music" on-insert="_onInsert" on-error="_onError">
       <meteor-query id="query" options="{{options}}" data="{{items}}" enable="{{_subready}}"></meteor-query>
